# niftyrec

./: CMakeLists.txt  LICENSE.txt  README.txt
CMake/matlab/: FindMATLAB.cmake
Doxygen/: Doxyfile
Matlab/: CMakeLists.txt  _et_backproject_mex.cpp  _et_fisher_grid_invprojection_mex.cpp  _et_fisher_grid_mex.cpp  _et_joint_histogram_mex.cpp  _et_project_mex.cpp  _et_reorder_activity_out.cpp  _et_rotate_mex.cpp  _et_variance_centre_approx_mex.cpp  _reg_control_points_from_affine_mex.cpp  _reg_gaussian_smooth_mex.cpp  _reg_gradient_NMI_nodes_mex.cpp  _reg_gradient_bending_energy_mex.cpp  _reg_gradient_voxel_to_nodes_mex.cpp  _reg_image_gradient_mex.cpp  _reg_resample_spline_mex.cpp  _reg_ssd_gradient_mex.cpp  _tt_backproject_ray_mex.cpp  _tt_project_mex.cpp  _tt_project_ray_mex.cpp
Matlab/doc/: CMakeLists.txt  Contents.m  info.xml
Matlab/m/: CMakeLists.txt  et_backproject.m  et_list_gpus.m  et_mapem_mrf_demo.m  et_mapem_step.m  et_mapem_tv_demo.m  et_mlem_demo.m  et_mlem_scatter_rbsc_demo.m  et_osem_demo.m  et_osmapem_step.m  et_project.m  et_rotate.m  et_set_gpu.m  et_spherical_phantom.m  tt_project_obsolete.m
Matlab/nifty_rec/: ._CMakeLists.txt  CMakeLists.txt  _et_affine_mex.cpp  _et_backproject_mex.cpp  _et_convolve_mex.cpp  _et_fisher_grid_invprojection_mex.cpp  _et_fisher_grid_mex.cpp  _et_gradient_attenuation_mex.cpp  _et_list_gpus_mex.cpp  _et_project_backproject_mex.cpp  _et_project_mex.cpp  _et_project_partial_mex.cpp  _et_reorder_activity_in.cpp  _et_rotate_mex.cpp  _et_set_gpu_mex.cpp  _et_variance_centre_approx_mex.cpp  _tt_backproject_ray_mex.cpp  _tt_project_ray_mex.cpp
Matlab/nifty_reg/: ._CMakeLists.txt  CMakeLists.txt  _reg_control_points_from_affine_mex.cpp  _reg_gradient_bending_energy_mex.cpp  _reg_gradient_jacobian_determinant_mex.cpp  _reg_gradient_voxel_to_nodes_mex.cpp  _reg_resample_spline_mex.cpp  _reg_scale_amplitude_mex.cpp  _reg_ssd_gradient_mex.cpp
Matlab/nifty_seg/: ._CMakeLists.txt  CMakeLists.txt  _seg_erode.cpp  _seg_get_MRF_strength.cpp  _seg_get_biasfield.cpp  _seg_get_biasfield_parameters.cpp  _seg_get_image.cpp  _seg_get_loglikelihood.cpp  _seg_get_mask.cpp  _seg_get_mean_variance.cpp  _seg_set_mask.cpp  (+25 more)
NiftyRec/: CMakeLists.txt  NiftyRec.py  setup.py
Python/: CMakeLists.txt
Python/NiftyRec/: ._CMakeLists.txt  CMakeLists.txt  README.txt  setup.py
Python/NiftyRec/NiftyRec/: NiftyRec.py  __init__.py
apps/: CMakeLists.txt  niftyrec_version.h  niftyrec_version.in.h  rec_spect.cpp  rec_spect.h
apps/niftyrec_gui/: CMakeLists.txt  Reconstruction.py  colormap.py  ipython_view.py  niftyrec.glade  niftyrec_gui.py  widgets.py
apps/simple_gui/: CMakeLists.txt  nifty_rec_simple_gui.glade  nifty_rec_simple_gui.py
doc/: CMakeLists.txt  programmer_manual.tex
emission-lib/: CMakeLists.txt  _et.cpp  _et.h  _et_array_interface.cpp  _et_array_interface.h  _et_clear_accumulator.cpp  _et_common.cpp  _et_common.h  _et_convolve2D.cpp  _et_convolve2D.h  _et_convolveSeparable2D.cpp  _et_convolveSeparable2D.h  _et_line_backproject.cpp  _et_line_backproject_attenuated.cpp  _et_line_backproject_attenuated.h  _et_line_integral.cpp  _et_line_integral.h  _et_line_integral_attenuated.cpp  _et_line_integral_attenuated.h  _niftyrec_memory.cpp  _niftyrec_memory.h  _reg.cpp  _reg_array_interface.h  _tt.cpp  _tt.h  test_et_backproject.cpp  test_et_line_integral.cpp  test_et_project.cpp
emission-lib_gpu/: CMakeLists.txt  _et_accumulate_gpu.cu  _et_accumulate_gpu.h  _et_accumulate_gpu_kernels.cu  _et_attenuation_gradient_gpu.cu  _et_attenuation_gradient_gpu.h  _et_attenuation_gradient_gpu_kernels.cu  _et_clear_accumulator_gpu.h  _et_convolveFFT2D_gpu.cu  _et_convolveFFT2D_gpu.h  _et_convolveFFT2D_gpu_kernels.cu  _et_convolveSeparable2D_gpu.cu  _et_convolveSeparable2D_gpu.h  _et_convolveSeparable2D_gpu_kernels.cu  _et_line_backproject_attenuated_gpu.h  _et_line_backproject_attenuated_gpu_kernels.cu  _et_line_backproject_gpu.cu  _et_line_backproject_gpu.h  _et_line_backproject_gpu_kernels.cu  _et_line_integral_attenuated_gpu.cu  _et_line_integral_attenuated_gpu.h  _et_line_integral_attenuated_gpu_kernels.cu  _et_line_integral_gpu.cu  _et_line_integral_gpu.h  _et_line_integral_gpu_kernels.cu  _pet_line_backproject_compressed_gpu.h  _pet_line_integral_compressed_gpu.h  _pet_line_integral_compressed_gpu_kernels.cu
lib/: _et_accumulate.cpp  _et_accumulate.h  _et_array_interface.cpp  _et_array_interface.h  _et_clear_accumulator.h  _et_common.h  _et_convolveFFT2D.cpp  _et_convolveFFT2D.h  _et_line_backproject.cpp  _et_line_backproject.h  _reg.cpp  _reg.h  _reg_array_interface.cpp  _tt_array_interface.cpp  _tt_array_interface.h
lib_gpu/: _et_accumulate_gpu.h  _et_clear_accumulator_gpu.cu  _et_joint_histogram_gpu.cu  _et_joint_histogram_gpu.h  _et_joint_histogram_gpu_kernels.cu  _et_line_backproject_attenuated_gpu.cu  _et_line_backproject_gpu.h  _et_line_backproject_gpu_kernels.cu  _et_line_integral_gpu_kernels.cu
misc/: CMakeLists.txt  count_lines.py
reg-lib/: CMakeLists.txt  _reg.cpp  _reg.h  _reg_array_interface.cpp  _reg_array_interface.h
reg-lib_gpu/: _reg_affineTransformation_gpu.cu  _reg_blocksize_gpu.h  _reg_cudaCommon.cu  _reg_resampling_gpu.cu
seg-lib/: CMakeLists.txt  _seg_EM.cpp  _seg_EM.h  _seg_LabFusion.cpp  _seg_array_interface.cpp  _seg_common.h  _seg_tools.cpp  _seg_tools.h
transmission-lib/: CMakeLists.txt  _tt.cpp  _tt.h  _tt_array_interface.cpp  _tt_array_interface.h  _tt_common.cpp  _tt_common.h  _tt_line_backproject_ray_cpu.cpp  _tt_line_backproject_ray_cpu.h
transmission-lib_gpu/: ._CMakeLists.txt  CMakeLists.txt  _tt_backproject_ray_gpu.cu  _tt_backproject_ray_gpu.h  _tt_backproject_ray_gpu_kernels.cu  _tt_line_backproject_ray_gpu.cu  _tt_line_backproject_ray_gpu.h  _tt_line_backproject_ray_gpu_kernels.cu  _tt_line_project_ray_gpu.cu  _tt_line_project_ray_gpu.h  _tt_line_project_ray_gpu_kernels.cu  _tt_perspective_gpu.h  _tt_project_ray_gpu.cu  _tt_project_ray_gpu.h  _tt_project_ray_gpu_kernels.cu
volume_render/: CMakeLists.txt  render_example_1.py  render_example_2.py  volumeRender.cpp  volumeRender.h  volumeRender_kernel.cu
(+53 files in other folders)
