
#-----------------------------------------------------------------------------

MACRO(BUILD_INSTALL_LIBRARY LIBRARY_NAME LIBRARY_TYPE LIBRARY_USE_GPU)
    ADD_LIBRARY(${LIBRARY_NAME} ${LIBRARY_TYPE} ${LIBRARY_NAME}.h ${LIBRARY_NAME}.cpp)
    IF(${LIBRARY_USE_GPU} MATCHES ON)
        TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REG_LIBRARIES} ${CUDA_LIBRARIES} ${CUDA_cufft_LIBRARY})
        CUDA_ADD_CUFFT_TO_TARGET(${LIBRARY_NAME})
        CUDA_ADD_CUBLAS_TO_TARGET(${LIBRARY_NAME})
    ELSE()
        TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REG_LIBRARIES})
    ENDIF()
    INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION ${LIB_INSTALL_DIR})
    INSTALL(FILES ${LIBRARY_NAME}.h DESTINATION ${INC_INSTALL_DIR})
ENDMACRO(BUILD_INSTALL_LIBRARY)

#-----------------------------------------------------------------------------

FOREACH(LIBRARY_NAME ${NIFTY_REC_LIBRARIES})
    BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})
ENDFOREACH(LIBRARY_NAME)

#-----------------------------------------------------------------------------

SET(LIBRARY_NAME _et)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REC_LIBRARIES})
IF(USE_CUDA)
    TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REC_LIBRARIES_GPU})
    CUDA_ADD_CUFFT_TO_TARGET(${LIBRARY_NAME})
    CUDA_ADD_CUBLAS_TO_TARGET(${LIBRARY_NAME})
ENDIF(USE_CUDA)

SET(LIBRARY_NAME _et_array_interface)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} _et)

SET(LIBRARY_NAME _tt)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REC_LIBRARIES})
IF(USE_CUDA)
    TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REC_LIBRARIES_GPU})
    CUDA_ADD_CUFFT_TO_TARGET(${LIBRARY_NAME})
    CUDA_ADD_CUBLAS_TO_TARGET(${LIBRARY_NAME})
ENDIF(USE_CUDA)

SET(LIBRARY_NAME _tt_array_interface)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} _tt)

SET(LIBRARY_NAME _reg)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})

SET(LIBRARY_NAME _reg_array_interface)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} _reg)

#-----------------------------------------------------------------------------

