
#-----------------------------------------------------------------------------
MACRO(BUILD_INSTALL_LIBRARY LIBRARY_NAME LIBRARY_TYPE LIBRARY_USE_GPU)
    ADD_LIBRARY(${LIBRARY_NAME} ${LIBRARY_TYPE} ${LIBRARY_NAME}.h ${LIBRARY_NAME}.cpp)
    IF(${LIBRARY_USE_GPU} MATCHES ON)
        TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REG_LIBRARIES} ${NIFTY_REG_LIBRARIES_GPU} ${CUDA_LIBRARIES} ${CUDA_cufft_LIBRARY})
        CUDA_ADD_CUFFT_TO_TARGET(${LIBRARY_NAME})
        CUDA_ADD_CUBLAS_TO_TARGET(${LIBRARY_NAME})
    ELSE()
        TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REG_LIBRARIES})
    ENDIF()
    INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION ${LIB_INSTALL_DIR})
    INSTALL(FILES ${LIBRARY_NAME}.h DESTINATION ${INC_INSTALL_DIR})
ENDMACRO(BUILD_INSTALL_LIBRARY)

#-----------------------------------------------------------------------------
MACRO(BUILD_TEST TEST_NAME TEST_USE_GPU)
    IF(${TEST_USE_GPU} MATCHES ON)
        CUDA_ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
        TARGET_LINK_LIBRARIES(${TEST_NAME} ${NIFTY_REC_ET_LIBRARIES} ${NIFTY_REG_LIBRARIES_GPU} ${CUDA_LIBRARIES} ${CUDA_cufft_LIBRARY} _et _et_array_interface )
    ELSE(${TEST_USE_GPU} MATCHES ON)
        ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
        TARGET_LINK_LIBRARIES(${TEST_NAME} ${NIFTY_REC_ET_LIBRARIES} ${NIFTY_REG_LIBRARIES} _et _et_array_interface )
    ENDIF(${TEST_USE_GPU} MATCHES ON)
ENDMACRO(BUILD_TEST)

#-----------------------------------------------------------------------------
FOREACH(LIBRARY_NAME ${NIFTY_REC_ET_LIBRARIES})
    BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${NiftyRec_USE_CUDA})
ENDFOREACH(LIBRARY_NAME)

#-----------------------------------------------------------------------------

SET(LIBRARY_NAME _et)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${NiftyRec_USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REC_ET_LIBRARIES})
IF(NiftyRec_USE_CUDA)
    TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NIFTY_REC_ET_LIBRARIES_GPU})
    CUDA_ADD_CUFFT_TO_TARGET(${LIBRARY_NAME})
    CUDA_ADD_CUBLAS_TO_TARGET(${LIBRARY_NAME})
ENDIF(NiftyRec_USE_CUDA)

SET(LIBRARY_NAME _et_array_interface)
BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${NiftyRec_USE_CUDA})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} _et)

#SET(LIBRARY_NAME _reg)
#BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${NiftyRec_USE_CUDA})

#SET(LIBRARY_NAME _reg_array_interface)
#BUILD_INSTALL_LIBRARY(${LIBRARY_NAME} ${LIB_TYPE} ${NiftyRec_USE_CUDA})
#TARGET_LINK_LIBRARIES(${LIBRARY_NAME} _reg)

#-----------------------------------------------------------------------------
SET(TEST_NAME test_et_project)
BUILD_TEST(${TEST_NAME} ${NiftyRec_USE_CUDA})
ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

SET(TEST_NAME test_et_backproject)
BUILD_TEST(${TEST_NAME} ${NiftyRec_USE_CUDA})
ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

SET(TEST_NAME test_et_line_integral)
BUILD_TEST(${TEST_NAME} ${NiftyRec_USE_CUDA})
ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

#-----------------------------------------------------------------------------



