
#FILE(GLOB PY_FILES "*.py")

#CONFIGURE_FILE(setup.py "${CMAKE_CURRENT_BINARY_DIR}"/${PY_FILE} @ONLY)
#FILE(COPY NiftyRec DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
#EXECUTE_PROCESS(COMMAND python ${CMAKE_BINARY_DIR}/Python/NiftyRec/setup.py build)
         
#Pack with CMake
#FILE(GLOB PY_FILES "${CMAKE_BINARY_DIR}/Python/NiftyRec/*.py")
#INSTALL(FILES ${PY_FILES} DESTINATION ${PYTHON_INSTALL_DIR})

#Install when 'make install'
#INSTALL(CODE "EXECUTE_PROCESS(COMMAND python ${CMAKE_BINARY_DIR}/Python/NiftyRec/setup.py install )")



#FILE(GLOB M_FILES "*.m")
#INSTALL(FILES ${M_FILES} DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})

#FILE(GLOB PY_FILES "*.py")
#foreach(PY_FILE ${PY_FILES})
#        configure_file(${PY_FILE} "${CMAKE_CURRENT_BINARY_DIR}"/${PY_FILE} @ONLY)
#endforeach(PY_FILE)
FILE(COPY NiftyRec DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY setup.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY README.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

#EXECUTE_PROCESS(COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py bdist)
EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} ARGS -E chdir ${CMAKE_CURRENT_BINARY_DIR}/ python setup.py bdist)
#ADD_CUSTOM_COMMAND(COMMAND ${CMAKE_COMMAND} ARGS -E chdir ${CMAKE_CURRENT_BINARY_DIR}/ rest-of-command)
         
#Pack with CMake
#FILE(GLOB PY_FILES "${CMAKE_BINARY_DIR}/Python/NiftyRec/*.py")
#INSTALL(FILES ${PY_FILES} DESTINATION ${PYTHON_INSTALL_DIR})

#Install when 'make install'
#INSTALL(CODE "EXECUTE_PROCESS(COMMAND python ${CMAKE_BINARY_DIR}/Python/NiftyRec/setup.py install )")

