
FILE(GLOB PY_FILES "*.py")
foreach(PY_FILE ${PY_FILES})
        configure_file(${PY_FILE} "${CMAKE_CURRENT_BINARY_DIR}"/${PY_FILE} @COPYONLY)
endforeach(PY_FILE)
INSTALL(FILES ${PY_FILES} DESTINATION ${BIN_INSTALL_DIR}/niftyrec_gui)

FILE(GLOB GLADE_FILES "*.glade")
foreach(GLADE_FILE ${GLADE_FILES})
        configure_file(${GLADE_FILE} "${CMAKE_CURRENT_BINARY_DIR}"/${GLADE_FILE} @COPYONLY)
endforeach(GLADE_FILE)
INSTALL(FILES ${GLADE_FILES} DESTINATION ${BIN_INSTALL_DIR}/niftyrec_gui)
