
##Linux:
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/nifty_rec_simple_gui.py ${CMAKE_CURRENT_BINARY_DIR}/nifty_rec_simple_gui)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/nifty_rec_simple_gui.glade ${CMAKE_CURRENT_BINARY_DIR}/nifty_rec_simple_gui.glade COPYONLY)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/bg.png ${CMAKE_CURRENT_BINARY_DIR}/bg.png COPYONLY)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/nifty_rec_simple_gui DESTINATION ${BIN_INSTALL_DIR} PERMISSIONS WORLD_READ WORLD_EXECUTE)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/nifty_rec_simple_gui.glade DESTINATION ${BIN_INSTALL_DIR} PERMISSIONS WORLD_READ)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/bg.png DESTINATION ${BIN_INSTALL_DIR} PERMISSIONS WORLD_READ)

##Windows:
#py2exe FIXME
